--- a/pratice/icon.html
+++ b/pratice/icon.html
@@ -4,17 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/0e6d1c49a0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <table>
-<h2>HEADING</h2>
-<form action="">
-    <label for="fname"> <b>First name:</label>
-    <input type="text">
-    <label for="">l</label>
-</form>
-    </table>
-    
-    
+    <i class="fa-solid fa-school"></i>
 </body>
 </html>
