--- a/pratice/registerclassic.html
+++ b/pratice/registerclassic.html
@@ -25,7 +25,7 @@
         <input type="radio" id="" name="fname" value="female">
         <label for="female">Female</label>
         <br><br><br>
-        <label for="COUNTRY">COUNTRY:</label>
+        <!-- <label for="COUNTRY">COUNTRY:</label> -->
         <select id="COUNTRY" name="COUNTRY">
           <option value="INDIA">INDIA</option>
           <option value="SPAIN">SPAIN</option>
